feat: add validate sources API and logic
